[gd_scene load_steps=3 format=3 uid="uid://c4si6ram0sudp"]

[ext_resource type="Texture2D" uid="uid://fjvwqd3cyopy" path="res://assets/block.png" id="1_12w72"]
[ext_resource type="Script" uid="uid://cisonv2tqi0gq" path="res://tracker.gd" id="1_ty7h7"]

[node name="Tracker" type="VBoxContainer"]
offset_right = 36.0
offset_bottom = 58.0
script = ExtResource("1_ty7h7")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Image" type="TextureRect" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_12w72")
expand_mode = 2
stretch_mode = 5

[node name="Display" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "9	"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SubButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " - "

[node name="AddButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " + "

[node name="TempButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = " ~ "

[connection signal="pressed" from="HBoxContainer/SubButton" to="." method="_on_sub_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TempButton" to="." method="_on_temp_button_pressed"]
